--- a/my-admin-panel/package.json
+++ b/my-admin-panel/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.7.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
+    "prop-types": "^15.8.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
